fix desktop page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <header>
-    <div class="w-full bg-white flex flex-row lg:justify-around md: justify-between">
+    <div class="w-full bg-white flex flex-row lg:justify-around">
       <nav class="flex items-center h-20">
         <div class="ml-3">
           <img src="images/download.png" alt="Logo" class="mr-auto" />
