--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <div
-      class="grid grid-rows-5 md:grid-rows-3 lg:grid-rows-2 grid-flow-col gap-2 place-content-center"
+      class="lg:grid lg:gap-3 lg:place-content-center lg:m-14 lg:grid-flow-col-dense lg:grid-rows-2"
     >
       <section class="w-72 h-80">
         <img class="w-full h-full object-cover" src="images/download-1.jpg" />
