--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="bg-neutral-900">
-    <header class="w-full p-4 bg-white flex justify-between items-center">
+    <header class="w-full p-4 bg-white flex items-center">
       <img src="images/download.png" class="mr-0" />
       <nav class="hidden lg:flex lg:mx-auto lg:text-gray-400">
         <a class="px-4">Page 1</a>
@@ -26,11 +26,12 @@
         <img src="images/menu.png" class="w-6 h-6 mx-4" />
       </div>
     </header>
+    <div class="absolute bg-orange-600 w-96 h-80 -z-10 top-24 right-1/4"></div>
     <div class="grid gap-3 place-content-center m-14 lg:grid-flow-col lg:grid-rows-2 md:grid-rows-3 sm:grid-rows-5">
       <section class="lg:order-1 md:order-1 w-72 h-80">
         <img class="w-full h-full object-cover" src="images/download-1.jpg" />
       </section>
-      <section class="lg:order-2 md:order-2 w-72 h-80 p-5 bg-orange-600 text-white flex flex-col">
+      <section class="lg:order-2 md:order-3 w-72 h-80 p-5 bg-orange-600 text-white flex flex-col">
         <span class="text-4xl mb-4">Blarg pop yolo</span>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo eos
@@ -39,13 +40,13 @@
           Obcaecati, provident.
         </p>
       </section>
-      <section class="lg:order-3 md:order-3 w-72 h-80">
+      <section class="lg:order-3 md:order-2 w-72 h-80">
         <img class="w-full h-full object-cover" src="images/download.jpg" />
       </section>
       <section class="lg:order-4 md:order-4 w-72 h-80">
         <img class="w-full h-full object-cover object-left" src="images/download-2.jpg" />
       </section>
-      <section class="lg:order-5 md:order-5 lg:h-full lg:row-span-2 md:col-span-2 p-5 w-72 bg-white flex flex-col justify-center">
+      <section class="lg:order-5 md:order-5 lg:row-span-2 md:col-span-2 p-5 w-72 bg-white flex flex-col justify-center">
         <span class="font-black text-4xl text-orange-600">Welcome</span>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quasi ex
