--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body class="bg-neutral-900">
     <header class="w-full p-4 bg-white flex items-center">
-      <img src="images/download.png" class="mr-0" />
+      <img src="images/download.png" class="mr-0" alt="" />
       <nav class="hidden lg:flex lg:mx-auto lg:text-gray-400">
         <a class="px-4">Page 1</a>
         <a class="px-4">Page 2</a>
@@ -22,7 +22,7 @@
         <a class="px-4">Page 10</a>
       </nav>
       <div class="lg:hidden">
-        <img src="images/menu.png" class="w-6 h-6 mx-4" />
+        <img src="images/menu.png" class="w-6 h-6 mx-4" alt=""/>
       </div>
     </header>
     <div class="absolute bg-orange-600 w-96 h-80 -z-10 top-24 right-1/4"></div>
@@ -30,7 +30,7 @@
       class="grid gap-3 place-content-center m-14 lg:grid-flow-col lg:grid-rows-2 md:grid-rows-3 sm:grid-rows-5"
     >
       <section class="lg:order-1 md:order-1 w-72 h-80">
-        <img class="w-full h-full object-cover" src="images/download-1.jpg" />
+        <img class="w-full h-full object-cover" src="images/download-1.jpg" alt="" />
       </section>
       <section
         class="lg:order-2 md:order-3 w-72 h-80 p-5 bg-orange-600 text-white flex flex-col"
@@ -44,13 +44,10 @@
         </p>
       </section>
       <section class="lg:order-3 md:order-2 w-72 h-80">
-        <img class="w-full h-full object-cover" src="images/download.jpg" />
+        <img class="w-full h-full object-cover" src="images/download.jpg" alt="" />
       </section>
       <section class="lg:order-4 md:order-4 w-72 h-80">
-        <img
-          class="w-full h-full object-cover object-left"
-          src="images/download-2.jpg"
-        />
+        <img class="w-full h-full object-cover object-left" src="images/download-2.jpg" alt="" />
       </section>
       <section
         class="lg:order-5 md:order-5 lg:row-span-2 md:col-span-2 p-5 w-72 bg-white flex flex-col justify-center"
@@ -69,10 +66,10 @@
     </div>
     <footer class="bg-zinc-800 py-8 absolute bottom-auto w-full">
       <div class="flex justify-center">
-        <img src="images/facebooklogo.png" class="w-6 h-6 mx-4" />
-        <img src="images/twitterlogo.png" class="w-6 h-6 mx-4" />
-        <img src="images/instagramlogo.png" class="w-6 h-6 mx-4" />
-        <img src="images/linkedinlogo.png" class="w-6 h-6 mx-4" />
+        <img src="images/facebooklogo.png" class="w-6 h-6 mx-4" alt="" />
+        <img src="images/twitterlogo.png" class="w-6 h-6 mx-4" alt="" />
+        <img src="images/instagramlogo.png" class="w-6 h-6 mx-4" alt="" />
+        <img src="images/linkedinlogo.png" class="w-6 h-6 mx-4" alt="" />
       </div>
     </footer>
   </body>
