--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <title>Responsive Template TailwindCSS</title>
     <meta charset="UTF-8" />
